Fix card bottom alignment

--- a/build-a-page-of-playing-cards/style.css
+++ b/build-a-page-of-playing-cards/style.css
@@ -38,6 +38,6 @@ body {
 }
 
 .card-bottom {
+  align-self: flex-end;
   transform: rotate(180deg);
-  text-align: right;
 }
